dep/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mes-workstatus
spec:
  selector:
    matchLabels:
      run: mes-workstatus
  replicas: 1
  template:
    metadata:
      labels:
        run: mes-workstatus
    spec:
      containers:
      - name: mes-workstatus
        image: iiicondor/mes_workstatus:1.0.3
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128M
            ephemeral-storage: 128M
          limits:
            cpu: 100m
            memory: 128M
            ephemeral-storage: 128M
        ports:
        - containerPort: 8080
          name: http
