dep/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mes-workstatus
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: mes-workstatus
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
